# pfsense-api-manager

./: .gitignore  LICENSE  README.md  TEST_PASSWD.json  TEST_PASSWD.json.gpg  config.toml  hosts.toml  nat.py  noxfile.py  pyproject.toml  requirements.txt
configs/: new_routeur_test.xml  routeur_test.xml
docs/: test.xml  web.py
docs/source/: aliases.rst  api.rst  conf.py  config.rst  dhcp.rst  index.rst  logs.rst  modules.rst  packages.rst  pfsense_manager.rst  reboot.rst  rules.rst  upload_config.rst  vpn.rst
src/pfsense_manager/: aliases.py  api.py  ca.py  certificates.py  config.py  dhcp.py  fields.py  logs.py  main.py  packages.py  reboot.py  rules.py  upload_config.py  vpn.py
